<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_bell"
            android:title="@string/notification" />
        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />

    </group>
    <group>
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>