<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mit.apartmentmanagement.persentation.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_invoiceFragment"
            app:destination="@id/invoiceFragment" />
        <action
            android:id="@+id/action_homeFragment_to_notificationDetailActivity"
            app:destination="@id/notificationDetailActivity" />
        <action
            android:id="@+id/action_homeFragment_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.mit.apartmentmanagement.persentation.ui.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_notificationFragment_to_notificationDetailActivity"
            app:destination="@id/notificationDetailActivity" />
    </fragment>
    <fragment
        android:id="@+id/invoiceFragment"
        android:name="com.mit.apartmentmanagement.persentation.ui.invoice.InvoiceFragment"
        android:label="@string/invoice"
        tools:layout="@layout/fragment_invoice" />
    <fragment
        android:id="@+id/requestFragment"
        android:name="com.mit.apartmentmanagement.persentation.ui.request.RequestFragment"
        android:label="@string/request"
        tools:layout="@layout/fragment_request" />
    <fragment
        android:id="@+id/amenitiesFragment"
        android:name="com.mit.apartmentmanagement.persentation.ui.amenity.AmenitiesFragment"
        android:label="@string/amenities"
        tools:layout="@layout/fragment_amenities" />
    <activity
        android:id="@+id/notificationDetailActivity"
        android:name="com.mit.apartmentmanagement.persentation.ui.notification.NotificationDetailActivity"
        android:label="NotificationDetailActivity" />
</navigation>